# med-result-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml
backend/: README.md  pyproject.toml
backend/src/med_result_ai/: config.py  database.py  main.py  models.py
backend/src/med_result_ai/routers/: analysis.py  chat.py  ocr.py  preprocess.py  upload.py
backend/src/med_result_ai/services/: ai_service.py  ocr_service.py  parser.py  preprocessing.py
frontend/: index.html  package-lock.json
frontend/src/: index.css
frontend/src/components/: ChatInterface.css  ChatInterface.tsx  ImagePreview.css  ImagePreview.tsx  ImageUpload.css  ImageUpload.tsx  Layout.css  Layout.tsx
frontend/src/pages/: Home.css  Home.tsx
